[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://CherryCreamSoda-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 44
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "0
"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 139.0
margin_bottom = 143.0
rect_scale = Vector2( 1.56712, 4.18969 )
custom_fonts/font = SubResource( 2 )
text = "ESCAPE THE MAZE"
align = 1
valign = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -369.5
margin_top = -90.0
margin_right = 369.5
margin_bottom = -19.0
custom_fonts/font = SubResource( 4 )
text = "Click or Press SPACE to start"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
